--- a/styles/italy-universities.css
+++ b/styles/italy-universities.css
@@ -13,9 +13,9 @@
 .universitiesNotice,
 .universitiesGrid,
 .universitiesBottomCta {
-  margin-bottom: 36px;
   width: min(1180px, calc(100% - 32px));
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* HERO */
@@ -276,6 +276,7 @@
 
 .universitiesBottomCta {
   margin-top: 46px;
+  margin-bottom: 24px;
   padding: 42px;
   border-radius: 36px;
   background:
